--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script data-ad-client="ca-pub-7799746246082535" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <title>Home</title>
 </head>
 <body>
