Add CNAME for custom domain and update content

--- a/education.html
+++ b/education.html
@@ -7,9 +7,9 @@
 
     <script data-ad-client="ca-pub-7799746246082535" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <title>Ritikesh Home</title>
+    <title>Ritikesh Education</title>
 </head>
 <body>
-    <h1>Mens At Work</h1>
+    <h1>This page will contain education</h1>
 </body>
 </html>
