--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,9 @@
 
     <script data-ad-client="ca-pub-7799746246082535" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <title>Ritikesh Home</title>
+    <title>Ritikesh Projects</title>
 </head>
 <body>
-    <h1>Mens At Work</h1>
+    <h1>This page will contain projects</h1>
 </body>
 </html>
